# Circuit-SAT-solver

./: .gitmodules  CMakeLists.txt  README.md  benchmark.sh  main.cpp
data/benchmarks/: CNFReductionSolver-10112023-205847.txt  OptimizedEnumerationSolver-10142023-001338.txt
data/benchs_for_test/: 100_50.bench  16_4.bench  18_37_2.bench  23_24_1.bench  5_6.bench  6700_4.bench  96_4_sat.bench  BvP_4_3-aigmiter.bench  BvP_4_4-aigmiter.bench  MOD3_1_hard_sat.bench  MOD3_36.bench  MOD3_54.bench  MOD3_77_sat.bench  MOD3_NW_4.bench  MOD3_low_density_1_sat.bench  PvS_4_3-aigmiter.bench  hamming10-2_sat.bench  logVn_10.bench  logVn_14.bench  logVn_16.bench  logVn_20.bench  logVn_4.bench  logVn_6.bench  miter_123.bench  miter_129.bench  miter_174.bench  miter_26.bench  miter_33.bench  miter_46.bench  miter_8.bench  miter_identity_php_10_31_3.bench  miter_identity_php_23_24_1.bench  miter_identity_php_6_19_3.bench  p_hat300-2_sat.bench  paley_13.bench  thr2_4000.bench  thr2_500.bench  thr2_5000.bench  thr2_6000.bench  trVlog_10.bench  (+7 more)
data/benchs_for_test_task/: 12_13_1.bench  17_35_2.bench  3300_4.bench  4300_4.bench  72_4.bench  BvP_7_4-aigmiter.bench  BvS_3_3-aigmiter.bench  BvS_6_4-aigmiter.bench  BvS_9_4-aigmiter.bench  MOD3_18_hard_sat.bench  MOD3_49_sat.bench  MOD3_6.bench  PvS_7_4-aigmiter.bench  brock200_4_sat.bench  logVn_12.bench  logVn_18.bench  logVn_2.bench  logVn_8.bench  miter_16.bench  miter_188.bench  miter_197.bench  miter_3.bench  miter_6.bench  miter_68.bench  miter_85.bench  (+23 more)
lib/: BenchParser.cpp  BenchParser.h  Circuit.cpp  Circuit.h
tests/: BruitForceSolverTest.cpp  CircuitFunctionsTest.cpp  SolversTest.cpp
(+18 files in other folders)
